[package]
name = "itree"
version = "0.1.0"
edition = "2024"
description = "A CLI for InvenTree inventory management system"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = {version = "1.1.2" }
